Added swagger doc in users endpoint
